[ci skip] clean the plot a54260cc94524c0f19ff78093e563e9792451b21

--- a/_sources/content/notebooks/feature_engineering.ipynb
+++ b/_sources/content/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c89054ce",
+   "id": "44b71f2c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e2ec756c",
+   "id": "2c719f0c",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22390ea5",
+   "id": "a251c0ce",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ab322b1",
+   "id": "b63f30cf",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c7cd972f",
+   "id": "3f336b8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ee874a6",
+   "id": "9b539b75",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "776e128b",
+   "id": "ab838310",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a261cffd",
+   "id": "e6d1418d",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0197fb4",
+   "id": "6f66d083",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8a64dc63",
+   "id": "eb0135e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1266ba57",
+   "id": "c0c1620f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb11083c",
+   "id": "4cb2e1a9",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c1d09a4c",
+   "id": "42449d61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0fb9141",
+   "id": "047ca145",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb4170d6",
+   "id": "b70992cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "191a9bef",
+   "id": "240cb97b",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30559c3c",
+   "id": "64af5d56",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbac6636",
+   "id": "1424b459",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "359feadc",
+   "id": "439698b6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "651add78",
+   "id": "4b955756",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c059fc90",
+   "id": "d456243a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b7a5bb5",
+   "id": "a08ce5e2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7e8deb6a",
+   "id": "79258fb1",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7931711",
+   "id": "b10138b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9541ca2d",
+   "id": "4a839710",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fe35016",
+   "id": "0cede2b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9042119",
+   "id": "77e2cf4b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24b488ad",
+   "id": "9c0bcb06",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f3537a45",
+   "id": "f96fd751",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "63c9d572",
+   "id": "15dfe192",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b4938c8",
+   "id": "a82d2c04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6c492c4a",
+   "id": "128f7873",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e8df309c",
+   "id": "698de658",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0e2f21d",
+   "id": "18ca4270",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "90e7cc55",
+   "id": "e236af84",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6ed0ddd6",
+   "id": "51f5d8b6",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26e24d7c",
+   "id": "98969fb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8dec55eb",
+   "id": "d05959e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fda7f235",
+   "id": "75067dd1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27d06893",
+   "id": "65ddac7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43fd5f95",
+   "id": "dbe1be09",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00b0f17f",
+   "id": "b722fa46",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "46476c86",
+   "id": "0fcdcf46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d0edd82a",
+   "id": "82005499",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ace72a8",
+   "id": "300ea910",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8bcb571b",
+   "id": "be4acb64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8186d5ff",
+   "id": "4824df59",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f2289475",
+   "id": "c9347ea1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b410b7a",
+   "id": "19b59dd0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f63414d2",
+   "id": "0fb7f573",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ecfde1f3",
+   "id": "93c4bc7b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "eb7ad68b",
+   "id": "cbee3ff9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9efb282a",
+   "id": "fc488b86",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6574ee59",
+   "id": "7205c5d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b464864b",
+   "id": "8e40ee53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b1adc342",
+   "id": "3c9b31ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,114 +1085,116 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0048218f",
+   "id": "ebb71caa",
    "metadata": {},
    "outputs": [],
    "source": [
     "target_column_names = [target_column_name_pattern.format(horizon=h) for h in horizons]\n",
     "predicted_target_column_names = [\n",
     "    f\"predicted_{target_column_name}\" for target_column_name in target_column_names\n",
-    "]"
+    "]\n",
+    "predictions = predictions.rename(\n",
+    "    {k: v for k, v in zip(target_column_names, predicted_target_column_names)}\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19b49ddc",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output = pl.concat(\n",
-    "    [\n",
-    "        targets.skb.select(cols=[\"prediction_time\", \"load_mw\"]).skb.eval(),\n",
-    "        predictions.rename(\n",
-    "            {k: v for k, v in zip(target_column_names, predicted_target_column_names)}\n",
-    "        ).skb.eval(),\n",
-    "    ],\n",
-    "    how=\"horizontal\",\n",
-    ").tail(24 * 14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "74e86ee4",
+   "id": "9d909a20",
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
     "\n",
     "\n",
-    "def plot_horizon(output, prediction_time, past_true_values=5):\n",
-    "    # TODO: display 2 segments for the true load values: past and future.\n",
-    "    # TODO: use a dict with naming instead of a positional tuple for the\n",
-    "    # forecast record. Find the row that contains the forecasted values\n",
-    "    predict_record = output.filter(pl.col(\"prediction_time\") == prediction_time).rows()[\n",
-    "        0\n",
-    "    ]\n",
-    "    # Build the forecast dataframe by concatenating the different horizons\n",
-    "    forecast = pl.DataFrame(\n",
+    "def plot_horizon_forecast(targets, predictions, plot_at_time, historical_timedelta):\n",
+    "    \"\"\"Plot the true target and the forecasted values.\"\"\"\n",
+    "    merged_data = targets.skb.select(cols=[\"prediction_time\", \"load_mw\"]).skb.concat(\n",
+    "        [predictions], axis=1\n",
+    "    )\n",
+    "    start_time = plot_at_time - historical_timedelta\n",
+    "    end_time = plot_at_time + datetime.timedelta(hours=predictions.skb.eval().shape[1])\n",
+    "\n",
+    "    true_values_past = merged_data.filter(\n",
+    "        pl.col(\"prediction_time\").is_between(start_time, plot_at_time, closed=\"both\")\n",
+    "    ).skb.select(cols=[\"prediction_time\", \"load_mw\"]).rename(\n",
+    "        {\"load_mw\": \"Past true load\"}\n",
+    "    )\n",
+    "    true_values_future = merged_data.filter(\n",
+    "        pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"both\")\n",
+    "    ).skb.select(cols=[\"prediction_time\", \"load_mw\"]).rename(\n",
+    "        {\"load_mw\": \"Future true load\"}\n",
+    "    )\n",
+    "\n",
+    "    predicted_record = (\n",
+    "        merged_data.skb.select(\n",
+    "            cols=skrub.selectors.filter_names(str.startswith, \"predict\")\n",
+    "        )\n",
+    "        .row(by_predicate=pl.col(\"prediction_time\") == plot_at_time, named=True)\n",
+    "        .skb.eval()\n",
+    "    )\n",
+    "    forecasted_values = pl.DataFrame(\n",
     "        {\n",
-    "            \"forecast_time\": predict_record[0] + datetime.timedelta(hours=h),\n",
-    "            \"forecast_value\": predicted_value,\n",
+    "            \"prediction_time\": predicted_record[\"prediction_time\"]\n",
+    "            + datetime.timedelta(hours=horizon),\n",
+    "            \"Forecasted load\": predicted_record[\n",
+    "                \"predicted_\" + target_column_name_pattern.format(horizon=horizon)\n",
+    "            ],\n",
     "        }\n",
-    "        for h, predicted_value in enumerate(predict_record[2:], start=1)\n",
+    "        for horizon in range(1, len(predicted_record))\n",
     "    )\n",
-    "    # Get the past true values and also the future true values of to the last horizon\n",
-    "    true_values = output.filter(\n",
-    "        (\n",
-    "            pl.col(\"prediction_time\")\n",
-    "            >= prediction_time - datetime.timedelta(hours=past_true_values)\n",
-    "        )\n",
-    "        & (\n",
-    "            pl.col(\"prediction_time\")\n",
-    "            <= prediction_time + datetime.timedelta(hours=len(predict_record) - 2)\n",
-    "        )\n",
-    "    )\n",
-    "    # plot the true and forecasted values\n",
-    "    true_values_chart = (\n",
-    "        altair.Chart(true_values)\n",
-    "        .transform_fold([\"load_mw\"])\n",
+    "\n",
+    "    true_values_past_chart = (\n",
+    "        altair.Chart(true_values_past.skb.eval())\n",
+    "        .transform_fold([\"Past true load\"])\n",
     "        .mark_line(tooltip=True)\n",
-    "        .encode(x=\"prediction_time:T\", y=\"load_mw:Q\", color=\"key:N\")\n",
+    "        .encode(x=\"prediction_time:T\", y=\"Past true load:Q\", color=\"key:N\")\n",
     "    )\n",
-    "    forecast_chart = (\n",
-    "        altair.Chart(forecast)\n",
-    "        .transform_fold([\"forecast_value\"])\n",
+    "    true_values_future_chart = (\n",
+    "        altair.Chart(true_values_future.skb.eval())\n",
+    "        .transform_fold([\"Future true load\"])\n",
     "        .mark_line(tooltip=True)\n",
-    "        .encode(x=\"forecast_time:T\", y=\"forecast_value:Q\", color=\"key:N\")\n",
+    "        .encode(x=\"prediction_time:T\", y=\"Future true load:Q\", color=\"key:N\")\n",
     "    )\n",
-    "    return (true_values_chart + forecast_chart).interactive()"
+    "    forecasted_values_chart = (\n",
+    "        altair.Chart(forecasted_values)\n",
+    "        .transform_fold([\"Forecasted load\"])\n",
+    "        .mark_line(tooltip=True)\n",
+    "        .encode(x=\"prediction_time:T\", y=\"Forecasted load:Q\", color=\"key:N\")\n",
+    "    )\n",
+    "    return (\n",
+    "        true_values_past_chart + true_values_future_chart + forecasted_values_chart\n",
+    "    ).interactive()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dcd7b562",
+   "id": "7d8ade51",
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_to_plot = datetime.datetime(2025, 5, 25, 0, 0, tzinfo=datetime.timezone.utc)\n",
-    "plot_horizon(output, time_to_plot, past_true_values=24 * 5)"
+    "plot_at_time = datetime.datetime(2025, 5, 25, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "historical_timedelta = datetime.timedelta(hours=24 * 5)\n",
+    "plot_horizon_forecast(targets, predictions, plot_at_time, historical_timedelta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6840cb24",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "e529235c",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "time_to_plot = datetime.datetime(2025, 5, 24, 0, 0, tzinfo=datetime.timezone.utc)\n",
-    "plot_horizon(output, time_to_plot, past_true_values=24 * 5)"
+    "plot_at_time = datetime.datetime(2025, 5, 24, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "plot_horizon_forecast(targets, predictions, plot_at_time, historical_timedelta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d7631d7",
+   "id": "5261b2c0",
    "metadata": {},
    "outputs": [],
    "source": []
