--- a/jupyterlite/files/notebooks/feature_engineering.ipynb
+++ b/jupyterlite/files/notebooks/feature_engineering.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fbf83ff8",
+   "id": "cc7a90f8",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -40,7 +40,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c472493",
+   "id": "696d7a08",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a2342596",
+   "id": "d7ea363f",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f3bfc77",
+   "id": "3df23d3e",
    "metadata": {},
    "source": [
     "## Time range\n",
@@ -95,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "780373ed",
+   "id": "60030206",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba777fb2",
+   "id": "ea655639",
    "metadata": {},
    "source": [
     "\n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26b1ba42",
+   "id": "4910186e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "56670aa1",
+   "id": "0ff91702",
    "metadata": {},
    "source": [
     "\n",
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0c042ea1",
+   "id": "65e920c1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4af6ee51",
+   "id": "fa6bec56",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -196,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a9a8409",
+   "id": "9d4c9a63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +206,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6869c5b3",
+   "id": "a4bc43bf",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23db8c49",
+   "id": "85bcf394",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -241,7 +241,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e48738fa",
+   "id": "41464fe0",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -263,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50b1c007",
+   "id": "2a255213",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5dabfb0",
+   "id": "98204f2d",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -299,7 +299,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dda1e450",
+   "id": "3068e60a",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -316,7 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "81db6cba",
+   "id": "e42f4361",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -338,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fdb88d00",
+   "id": "faa098e7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -365,7 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4eb7522c",
+   "id": "b818338c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c2d5fa9",
+   "id": "53e434b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c03f3d6",
+   "id": "a8b6bde3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c20fb1aa",
+   "id": "e81787f3",
    "metadata": {},
    "source": [
     "\n",
@@ -415,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b63b233",
+   "id": "e581fa16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,7 +426,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1ed95575",
+   "id": "e7809f12",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -444,7 +444,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fd3c4587",
+   "id": "c6eeaf7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a2766c8",
+   "id": "6877c415",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5a565b41",
+   "id": "c69ef99c",
    "metadata": {},
    "source": [
     "## Investigating outliers in the lagged features\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a62f1b81",
+   "id": "42e0d4f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1227d7e6",
+   "id": "a367305d",
    "metadata": {},
    "source": [
     "\n",
@@ -536,7 +536,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dddf534f",
+   "id": "eb072236",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c0a25675",
+   "id": "42c03854",
    "metadata": {},
    "source": [
     "\n",
@@ -559,7 +559,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e7e5bd97",
+   "id": "08c0e04a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -583,7 +583,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8db1aefa",
+   "id": "1a289ac0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ee4ccd30",
+   "id": "6c6ba6c7",
    "metadata": {},
    "source": [
     "\n",
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26b1e981",
+   "id": "8a834c23",
    "metadata": {},
    "source": [
     "## Final dataset\n",
@@ -640,7 +640,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d69659c7",
+   "id": "b96be820",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,7 +661,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d2effe0",
+   "id": "1be7fe40",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -723,7 +723,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40d38df5",
+   "id": "eb46767a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -749,7 +749,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a48032e0",
+   "id": "2834e9ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8cc621a0",
+   "id": "da73dc52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -807,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9d5ac438",
+   "id": "3c9a87f1",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -835,7 +835,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "881a42b2",
+   "id": "127c285d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "449e2db6",
+   "id": "ef19ff59",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -890,7 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c892749",
+   "id": "9f5742ee",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -912,7 +912,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d01e323",
+   "id": "2670dfeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -922,7 +922,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "49b1c0e9",
+   "id": "4bef4c44",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -934,7 +934,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4715a019",
+   "id": "64fff35e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -955,7 +955,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9ef8df41",
+   "id": "4b1d8e4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -971,7 +971,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18f1f66c",
+   "id": "553b080c",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -987,7 +987,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fbb36eac",
+   "id": "8683b871",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1006,7 +1006,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1932966f",
+   "id": "a0a33bd9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1018,7 +1018,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b7e41388",
+   "id": "b8ec2264",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1054,7 +1054,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79311ad7",
+   "id": "3851bb4e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1064,7 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c82fd264",
+   "id": "aedf1f24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1074,7 +1074,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1661ba78",
+   "id": "79d45834",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1085,114 +1085,116 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "50c5f6ce",
+   "id": "0549276f",
    "metadata": {},
    "outputs": [],
    "source": [
     "target_column_names = [target_column_name_pattern.format(horizon=h) for h in horizons]\n",
     "predicted_target_column_names = [\n",
     "    f\"predicted_{target_column_name}\" for target_column_name in target_column_names\n",
-    "]"
+    "]\n",
+    "predictions = predictions.rename(\n",
+    "    {k: v for k, v in zip(target_column_names, predicted_target_column_names)}\n",
+    ")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "96aecbc6",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output = pl.concat(\n",
-    "    [\n",
-    "        targets.skb.select(cols=[\"prediction_time\", \"load_mw\"]).skb.eval(),\n",
-    "        predictions.rename(\n",
-    "            {k: v for k, v in zip(target_column_names, predicted_target_column_names)}\n",
-    "        ).skb.eval(),\n",
-    "    ],\n",
-    "    how=\"horizontal\",\n",
-    ").tail(24 * 14)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "313dd879",
+   "id": "0dcc08fe",
    "metadata": {},
    "outputs": [],
    "source": [
     "import datetime\n",
     "\n",
     "\n",
-    "def plot_horizon(output, prediction_time, past_true_values=5):\n",
-    "    # TODO: display 2 segments for the true load values: past and future.\n",
-    "    # TODO: use a dict with naming instead of a positional tuple for the\n",
-    "    # forecast record. Find the row that contains the forecasted values\n",
-    "    predict_record = output.filter(pl.col(\"prediction_time\") == prediction_time).rows()[\n",
-    "        0\n",
-    "    ]\n",
-    "    # Build the forecast dataframe by concatenating the different horizons\n",
-    "    forecast = pl.DataFrame(\n",
+    "def plot_horizon_forecast(targets, predictions, plot_at_time, historical_timedelta):\n",
+    "    \"\"\"Plot the true target and the forecasted values.\"\"\"\n",
+    "    merged_data = targets.skb.select(cols=[\"prediction_time\", \"load_mw\"]).skb.concat(\n",
+    "        [predictions], axis=1\n",
+    "    )\n",
+    "    start_time = plot_at_time - historical_timedelta\n",
+    "    end_time = plot_at_time + datetime.timedelta(hours=predictions.skb.eval().shape[1])\n",
+    "\n",
+    "    true_values_past = merged_data.filter(\n",
+    "        pl.col(\"prediction_time\").is_between(start_time, plot_at_time, closed=\"both\")\n",
+    "    ).skb.select(cols=[\"prediction_time\", \"load_mw\"]).rename(\n",
+    "        {\"load_mw\": \"Past true load\"}\n",
+    "    )\n",
+    "    true_values_future = merged_data.filter(\n",
+    "        pl.col(\"prediction_time\").is_between(plot_at_time, end_time, closed=\"both\")\n",
+    "    ).skb.select(cols=[\"prediction_time\", \"load_mw\"]).rename(\n",
+    "        {\"load_mw\": \"Future true load\"}\n",
+    "    )\n",
+    "\n",
+    "    predicted_record = (\n",
+    "        merged_data.skb.select(\n",
+    "            cols=skrub.selectors.filter_names(str.startswith, \"predict\")\n",
+    "        )\n",
+    "        .row(by_predicate=pl.col(\"prediction_time\") == plot_at_time, named=True)\n",
+    "        .skb.eval()\n",
+    "    )\n",
+    "    forecasted_values = pl.DataFrame(\n",
     "        {\n",
-    "            \"forecast_time\": predict_record[0] + datetime.timedelta(hours=h),\n",
-    "            \"forecast_value\": predicted_value,\n",
+    "            \"prediction_time\": predicted_record[\"prediction_time\"]\n",
+    "            + datetime.timedelta(hours=horizon),\n",
+    "            \"Forecasted load\": predicted_record[\n",
+    "                \"predicted_\" + target_column_name_pattern.format(horizon=horizon)\n",
+    "            ],\n",
     "        }\n",
-    "        for h, predicted_value in enumerate(predict_record[2:], start=1)\n",
+    "        for horizon in range(1, len(predicted_record))\n",
     "    )\n",
-    "    # Get the past true values and also the future true values of to the last horizon\n",
-    "    true_values = output.filter(\n",
-    "        (\n",
-    "            pl.col(\"prediction_time\")\n",
-    "            >= prediction_time - datetime.timedelta(hours=past_true_values)\n",
-    "        )\n",
-    "        & (\n",
-    "            pl.col(\"prediction_time\")\n",
-    "            <= prediction_time + datetime.timedelta(hours=len(predict_record) - 2)\n",
-    "        )\n",
-    "    )\n",
-    "    # plot the true and forecasted values\n",
-    "    true_values_chart = (\n",
-    "        altair.Chart(true_values)\n",
-    "        .transform_fold([\"load_mw\"])\n",
+    "\n",
+    "    true_values_past_chart = (\n",
+    "        altair.Chart(true_values_past.skb.eval())\n",
+    "        .transform_fold([\"Past true load\"])\n",
     "        .mark_line(tooltip=True)\n",
-    "        .encode(x=\"prediction_time:T\", y=\"load_mw:Q\", color=\"key:N\")\n",
+    "        .encode(x=\"prediction_time:T\", y=\"Past true load:Q\", color=\"key:N\")\n",
     "    )\n",
-    "    forecast_chart = (\n",
-    "        altair.Chart(forecast)\n",
-    "        .transform_fold([\"forecast_value\"])\n",
+    "    true_values_future_chart = (\n",
+    "        altair.Chart(true_values_future.skb.eval())\n",
+    "        .transform_fold([\"Future true load\"])\n",
     "        .mark_line(tooltip=True)\n",
-    "        .encode(x=\"forecast_time:T\", y=\"forecast_value:Q\", color=\"key:N\")\n",
+    "        .encode(x=\"prediction_time:T\", y=\"Future true load:Q\", color=\"key:N\")\n",
     "    )\n",
-    "    return (true_values_chart + forecast_chart).interactive()"
+    "    forecasted_values_chart = (\n",
+    "        altair.Chart(forecasted_values)\n",
+    "        .transform_fold([\"Forecasted load\"])\n",
+    "        .mark_line(tooltip=True)\n",
+    "        .encode(x=\"prediction_time:T\", y=\"Forecasted load:Q\", color=\"key:N\")\n",
+    "    )\n",
+    "    return (\n",
+    "        true_values_past_chart + true_values_future_chart + forecasted_values_chart\n",
+    "    ).interactive()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "02a3b9d3",
+   "id": "eaa81c1d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "time_to_plot = datetime.datetime(2025, 5, 25, 0, 0, tzinfo=datetime.timezone.utc)\n",
-    "plot_horizon(output, time_to_plot, past_true_values=24 * 5)"
+    "plot_at_time = datetime.datetime(2025, 5, 25, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "historical_timedelta = datetime.timedelta(hours=24 * 5)\n",
+    "plot_horizon_forecast(targets, predictions, plot_at_time, historical_timedelta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "022cc8c9",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "6122afde",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "time_to_plot = datetime.datetime(2025, 5, 24, 0, 0, tzinfo=datetime.timezone.utc)\n",
-    "plot_horizon(output, time_to_plot, past_true_values=24 * 5)"
+    "plot_at_time = datetime.datetime(2025, 5, 24, 0, 0, tzinfo=datetime.timezone.utc)\n",
+    "plot_horizon_forecast(targets, predictions, plot_at_time, historical_timedelta)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3e0aaf72",
+   "id": "fd08ee29",
    "metadata": {},
    "outputs": [],
    "source": []
